--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "test": "mocha test/**/*test.js"
   },
   "keywords": [
     "learning"
